--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
     <div class="hero-text-side">
       <h1>Hello Everyone!!</h1>
       <div class="hero-desc">
-        My name is Arupam Biswas, and I’m a Neuroscience Researcher exploring how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where I am currently a PhD student at the <a href="https://idn.biologie.uni-mainz.de/" target="_blank">Institute of Developmental Biology and Neurobiology (iDN)</a>, Johannes Gutenberg University Mainz. My research focuses on developing models and tools for next-generation therapies using precision-engineered artificial biomaterials to support CNS regeneration after traumatic brain injuries.
+        My name is Arupam Biswas, and I’m a Neuroscience Researcher exploring how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where I am currently a PhD student at the <a href="https://idn.biologie.uni-mainz.de/" target="_blank">Institute of Developmental Biology and Neurobiology(iDN)</a>. My research focuses on developing models and tools for next-generation therapies using precision-engineered artificial biomaterials to support central nervous system(CNS) regeneration after Traumatic Injuries of the Brain(TBI) or Spinal Cord(SCI), or neurodegenerative autoimmune diseases, such as Multiple Sclerosis(MS).
         <br><br>
         Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to my approach in science and life.
         <br><br>
@@ -765,12 +765,12 @@
         </div>
         <div class="edu-details">
           <div class="edu-row">
-            <span class="edu-degree"><strong>PhD in <span class="edu-major">Neuroscience</span></strong></span>
+            <span class="edu-degree"><strong>Doctoral Candidate in <span class="edu-major">Neuroscience</span></strong></span>
             <span class="edu-year"><strong>2025–Present</strong></span>
           </div>
           <div class="edu-institute mainz-font"><strong>Johannes Gutenberg University Mainz</strong> <span class="edu-country">| Germany</span></div>
           <div class="edu-institution"><b><i>Institution:</i></b> Institute of Developmental Biology and Neurobiology (iDN)</div>
-          <div class="edu-thesis"><b><i>Dissertation Title:</i></b> Interactive Biomaterials for Neural Regeneration</div>
+          <div class="edu-thesis"><b><i>Dissertation Title:</i></b> Interactive Biomaterials for Neural Regeneration(InteReg)</div>
           <div class="edu-pis"><b><i>PIs:</i></b> Prof. Dr. Martin Heine, Prof. Dr. Claire Jacob, Dr. Himanshu Kumar Mishra</div>
         </div>
       </div>
@@ -781,19 +781,19 @@
         </div>
         <div class="edu-details">
           <div class="edu-row">
-            <span class="edu-degree"><strong>Five-Year Integrated M.Sc in <span class="edu-major">Life Sciences</span></strong></span>
+            <span class="edu-degree"><strong>Five-Year Integrated M.Sc. in <span class="edu-major">Life Sciences</span></strong></span>
             <span class="edu-year"><strong>2019–2024</strong></span>
           </div>
           <div class="edu-institute vb-font"><strong>Visva-Bharati</strong> <span class="edu-country">| India</span></div>
           <div class="edu-institution"><b><i>Institution:</i></b> Integrated Science Education and Research Centre (ISERC)</div>
-          <div class="edu-thesis"><b><i>Dissertation Title:</i></b> High-Content Screening for neurite growth analyses: Evaluating gene treatments</div>
+          <div class="edu-thesis"><b><i>Dissertation Title:</i></b> High-content screening(HCS) for neurite growth analyses: Evaluating gene treatments</div>
           <div class="edu-pis"><b><i>PI:</i></b> Dr. Ishwariya Venkatesh, Senior Scientist, CSIR-Centre for Cellular and Molecular Biology (CCMB), India.</div>
         </div>
       </div>
     </div>
   </section>
   <section id="research" class="research-section">
-    <h2>Research</h2>
+    <h2>Research</h2>\
     <div class="carousel">
       <div class="carousel-track">
         <div class="carousel-item">
@@ -858,7 +858,7 @@
         <div class="caption">Presenting at HySci: IIT-Hyderabad Chapter'24</div>
       </div>
       <div class="gallery-item" data-tags="conferences">
-        <img src="CMMDR.jpg" alt="Conference 2" />
+        <img src="CMMDR2.jpg" alt="Conference 2" />
         <div class="caption">Cellular and Molecular Mechanisms of Development and Regeneration: Shiv Nadar University (Feb, 2024)</div>
       </div>
       <div class="gallery-item" data-tags="conferences">
