--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
       position: relative;
       z-index: 1;
       background: #fff;
-      border-radius: 20px;
+      border-box: 20px;
       box-shadow: 0 6px 36px #bae6fd30, 0 2px 6px #1976d211;
       padding: 3.1rem 4.2rem 3.1rem 4.2rem;
       transition: box-shadow 0.22s, transform 0.18s;
@@ -368,7 +368,7 @@
     .edu-logo-box img {
       width: 128px;
       height: 128px;
-      border-radius: 30px;
+      border-box: 30px;
       object-fit: contain;
       background: #fff;
       box-shadow: 0 2px 10px #e0f2fe66;
@@ -419,7 +419,7 @@
       letter-spacing: 0.12px;
     }
     .mainz-font { color: #1976d2; }
-    .vb-font { color: #fb8500; }
+    .vb-font { color: #1976d2; }
     .edu-country {
       font-family: 'Fira Mono', monospace;
       color: #64748b;
