--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: center; /* Center vertically */
       max-width: none;
       min-width: 0;
       width: 100%;
       background: none;
-      padding-top: 2.5rem;
+      padding-top: 0; /* Remove extra top padding */
     }
     .profile-pic {
       display: block;
@@ -347,12 +347,13 @@
       box-shadow: 0 12px 48px #1976d221, 0 4px 16px #1976d215;
       transform: translateY(-2px) scale(1.015);
     }
+    /* MODIFIED: edu-logo-box to box style, no gradient, not round, contained */
     .edu-logo-box {
       flex-shrink: 0;
-      width: 170px;
-      height: 170px;
+      width: 128px;
+      height: 128px;
       background: #e0f2fe;
-      border-radius: 50%;
+      border-radius: 12px;
       box-shadow: 0 4px 18px #bae6fd44;
       display: flex;
       align-items: center;
@@ -362,17 +363,18 @@
       z-index: 2;
       margin-right: 0.7rem;
       margin-left: 0.2rem;
+      /* Remove gradient backgrounds from classes below */
     }
-    .edu-logo-box.mainz { background: linear-gradient(135deg, #bae6fd 60%, #1976d2 100%);}
-    .edu-logo-box.vb { background: linear-gradient(135deg, #ffebc2 50%, #fb8500 100%);}
     .edu-logo-box img {
-      width: 128px;
-      height: 128px;
-      border-box: 30px;
+      width: 90px;
+      height: 90px;
       object-fit: contain;
       background: #fff;
       box-shadow: 0 2px 10px #e0f2fe66;
+      border-radius: 6px;
     }
+    .edu-logo-box.mainz { background: #e0f2fe; }
+    .edu-logo-box.vb { background: #ffebc2; }
     .edu-details {
       flex: 1;
       display: flex;
@@ -531,6 +533,94 @@
       background: rgba(0, 0, 0, 0.8);
       outline: none;
     }
+    /* --------- PUBLICATIONS SECTION --------- */
+    .publications-section {
+      padding: 3rem 1rem 2rem 1rem;
+      background: #fafdff;
+      color: #1e293b;
+      font-size: 1.17rem;
+      font-family: 'Montserrat', 'Outfit', Arial, sans-serif;
+    }
+    .publications-section h2 {
+      font-size: 2.1rem;
+      font-family: 'Pacifico', cursive;
+      color: #0f172a;
+      text-align: center;
+      margin-bottom: 2rem;
+      font-weight: 700;
+    }
+    .publication-list {
+      max-width: 900px;
+      margin: 0 auto;
+      list-style: none;
+      padding: 0;
+    }
+    .publication-list li {
+      margin-bottom: 1.5rem;
+      padding-bottom: 1rem;
+      border-bottom: 1px solid #e0e7ef;
+      line-height: 1.7;
+    }
+    .publication-list li:last-child {
+      border-bottom: none;
+    }
+    .publication-title {
+      font-weight: 700;
+      color: #1976d2;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 1.11rem;
+    }
+    .publication-authors {
+      font-family: 'Outfit', 'Montserrat', Arial, sans-serif;
+      color: #475569;
+    }
+    .publication-link a {
+      color: #38bdf8;
+      text-decoration: none;
+      font-size: 0.99rem;
+    }
+    .publication-link a:hover { text-decoration: underline; }
+    /* --------- SCI-COM SECTION --------- */
+    .scicom-section {
+      padding: 3rem 1rem 2rem 1rem;
+      background: linear-gradient(to right, #e0f2fe, #fafdff);
+      color: #1e293b;
+      font-size: 1.17rem;
+      font-family: 'Montserrat', 'Outfit', Arial, sans-serif;
+    }
+    .scicom-section h2 {
+      font-size: 2.1rem;
+      font-family: 'Pacifico', cursive;
+      color: #0f172a;
+      text-align: center;
+      margin-bottom: 2rem;
+      font-weight: 700;
+    }
+    .scicom-list {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 0;
+      list-style: none;
+    }
+    .scicom-list li {
+      margin-bottom: 1.5rem;
+      border-bottom: 1px solid #e0e7ef;
+      padding-bottom: 1rem;
+      line-height: 1.7;
+    }
+    .scicom-list li:last-child {
+      border-bottom: none;
+    }
+    .scicom-title {
+      font-weight: 700;
+      color: #1976d2;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 1.11rem;
+    }
+    .scicom-desc {
+      color: #475569;
+      font-family: 'Outfit', 'Montserrat', Arial, sans-serif;
+    }
 
     /* GALLERY SECTION */
     .gallery-section {
@@ -675,13 +765,13 @@
     @media (max-width: 700px) {
       .profile-pic { width: 95vw; max-width: 95vw; min-width: 0; }
       .hero-split { flex-direction: column; min-height: unset; }
-      .hero-img-side { min-height: 220px; height: auto; width: 100vw; position: relative; flex-basis: unset; max-width: 100vw; }
+      .hero-img-side { min-height: 220px; height: auto; width: 100vw; position: relative; flex-basis: unset; max-width: 100vw; justify-content: center; }
       .social-links.hero-social { margin-top: 1.2rem; margin-bottom: 0.5rem; }
       .hero-text-side { align-items: center; padding: 2.7rem 7vw 2rem 7vw; text-align: center; }
       .hero-text-side h1, .get-in-touch h2, .education-section h2, .research-section h2 { font-size: 1.37rem; }
       .hero-desc { font-size: 1rem; max-width: 640px; }
       .carousel-item img { max-width: 95vw; }
-      .get-in-touch, .education-section, .research-section { padding-left: 7vw !important; padding-right: 7vw !important; }
+      .get-in-touch, .education-section, .research-section, .publications-section, .scicom-section { padding-left: 7vw !important; padding-right: 7vw !important; }
       .social-links a, .social-links.hero-social a { width: 42px; height: 42px; }
       .social-links a img, .social-links.hero-social a img { width: 22px; height: 22px; }
       .gallery-grid { grid-template-columns: repeat(auto-fit, minmax(190px, 1fr)); gap: 1rem; }
@@ -690,7 +780,7 @@
       .gallery-grid { grid-template-columns: 1fr; }
       .ed-title { font-size: 1.05rem; }
       .hero-text-side { padding: 1.25rem 2vw 1rem 2vw; }
-      .get-in-touch, .education-section, .research-section { padding-left: 2vw !important; padding-right: 2vw !important; }
+      .get-in-touch, .education-section, .research-section, .publications-section, .scicom-section { padding-left: 2vw !important; padding-right: 2vw !important; }
       .edu-item { flex-direction: column; align-items: flex-start; gap: 0.3rem; }
       .edu-logo-box { width: 54px; height: 54px; margin: 0 0 0.5em 0;}
       .edu-logo-box img { width: 34px; height: 34px; }
@@ -706,6 +796,8 @@
       <li><a href="#home">Home</a></li>
       <li><a href="#education">Education</a></li>
       <li><a href="#research">Research</a></li>
+      <li><a href="#publications">Publications</a></li>
+      <li><a href="#scicom">Sci-Com</a></li>
       <li><a href="#gallery">Gallery</a></li>
       <li><a href="#get-in-touch">Get in Touch</a></li>
     </ul>
@@ -718,6 +810,8 @@
       <li><a href="#home" role="menuitem" tabindex="0">Home</a></li>
       <li><a href="#education" role="menuitem" tabindex="0">Education</a></li>
       <li><a href="#research" role="menuitem" tabindex="0">Research</a></li>
+      <li><a href="#publications" role="menuitem" tabindex="0">Publications</a></li>
+      <li><a href="#scicom" role="menuitem" tabindex="0">Sci-Com</a></li>
       <li><a href="#gallery" role="menuitem" tabindex="0">Gallery</a></li>
       <li><a href="#get-in-touch" role="menuitem" tabindex="0">Get in Touch</a></li>
     </ul>
@@ -747,9 +841,9 @@
     <div class="hero-text-side">
       <h1>Hello Everyone!!</h1>
       <div class="hero-desc">
-        My name is Arupam Biswas, and I’m a Neuroscience Researcher exploring how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where I am currently a PhD student at the <a href="https://idn.biologie.uni-mainz.de/" target="_blank">Institute of Developmental Biology and Neurobiology(iDN)</a>. My research focuses on developing models and tools for next-generation therapies using precision-engineered artificial biomaterials to support central nervous system(CNS) regeneration after Traumatic Injuries of the Brain(TBI) or Spinal Cord(SCI), or neurodegenerative autoimmune diseases, such as Multiple Sclerosis(MS).
+        My name is Arupam Biswas, and I’m a Neuroscience Researcher exploring how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where I am c[...]
         <br><br>
-        Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to my approach in science and life.
+        Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key[...]
         <br><br>
         If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!
       </div>
@@ -793,7 +887,7 @@
     </div>
   </section>
   <section id="research" class="research-section">
-    <h2>Research</h2>\
+    <h2>Research</h2>
     <div class="carousel">
       <div class="carousel-track">
         <div class="carousel-item">
@@ -801,7 +895,7 @@
           <div class="item-info">
             <h3>PhD Topic: Interactive Biomaterials for Neural Regeneration (InteReg)</h3>
             <p>
-              Traumatic CNS injuries and diseases like MS lead to lasting disability due to poor regenerative capacity. Barriers include glial scarring, inhibitory debris, lack of axonal guidance, and immune modulation. My work focuses on developing interactive biomaterials for neural tissue engineering, aiming to bridge injury gaps and promote regeneration using interdisciplinary approaches.
+              Traumatic CNS injuries and diseases like MS lead to lasting disability due to poor regenerative capacity. Barriers include glial scarring, inhibitory debris, lack of axonal guidance, and[...]
             </p>
           </div>
         </div>
@@ -810,7 +904,7 @@
           <div class="item-info">
             <h3>Master's Thesis: High-Content Screening for neurite growth analyses</h3>
             <p>
-              This work involved developing automated high-content screening methods to evaluate the effect of genetic and pharmacological treatments on neurite outgrowth in cultured neuronal cells. The project contributed to understanding the cellular mechanisms underlying neuronal regeneration and identifying potential therapeutic targets.
+              This work involved developing automated high-content screening methods to evaluate the effect of genetic and pharmacological treatments on neurite outgrowth in cultured neuronal cells. T[...]
             </p>
           </div>
         </div>
@@ -827,6 +921,42 @@
       <button class="carousel-button prev">‹</button>
       <button class="carousel-button next">›</button>
     </div>
+  </section>
+  <!-- NEW PUBLICATIONS SECTION -->
+  <section id="publications" class="publications-section">
+    <h2>Publications</h2>
+    <ul class="publication-list">
+      <li>
+        <span class="publication-title">[Sample Publication Title 1]</span><br>
+        <span class="publication-authors">A. Biswas, M. Heine, C. Jacob, H.K. Mishra</span><br>
+        <span class="publication-link"><a href="#" target="_blank">Link</a></span>
+      </li>
+      <li>
+        <span class="publication-title">[Sample Publication Title 2]</span><br>
+        <span class="publication-authors">A. Biswas, I. Venkatesh</span><br>
+        <span class="publication-link"><a href="#" target="_blank">Link</a></span>
+      </li>
+      <!-- Add more publications as needed -->
+    </ul>
+  </section>
+  <!-- NEW SCI-COM SECTION -->
+  <section id="scicom" class="scicom-section">
+    <h2>Sci-Com</h2>
+    <ul class="scicom-list">
+      <li>
+        <span class="scicom-title">[Sample Sci-Com Activity 1]</span><br>
+        <span class="scicom-desc">
+          Presented neuroscience concepts to high school students at Science Day, Mainz (2024).
+        </span>
+      </li>
+      <li>
+        <span class="scicom-title">[Sample Sci-Com Activity 2]</span><br>
+        <span class="scicom-desc">
+          Organized and led “Neuro Night” outreach for the general public at Visva-Bharati.
+        </span>
+      </li>
+      <!-- Add more Sci-Com activities as needed -->
+    </ul>
   </section>
   <section id="gallery" class="gallery-section">
     <h2>Gallery</h2>
@@ -998,6 +1128,7 @@
           });
         });
       });
+    // ...rest of your code...
     });
   </script>
 </body>
