--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
       position: sticky;
       top: 0;
       z-index: 99;
-      font-family: 'Montserrat', 'Outfit', Arial, sans-serif;
     }
     nav h1 {
       font-weight: 700;
@@ -168,7 +167,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center; /* Center vertically */
+      justify-content: center;
       max-width: none;
       min-width: 0;
       width: 100%;
@@ -343,7 +342,6 @@
       box-shadow: 0 12px 48px #1976d221, 0 4px 16px #1976d215;
       transform: translateY(-2px) scale(1.015);
     }
-    /* MODIFIED: edu-logo-box to box style, no gradient, not round, contained */
     .edu-logo-box {
       flex-shrink: 0;
       width: 128px;
@@ -731,7 +729,7 @@
       background-color: #1e293b;
       max-width: none;
     }
-    /* MOBILE RESPONSIVENESS */
+    /* MOBILE CUSTOMIZATIONS */
     @media (max-width: 700px) {
       .hero-split {
         flex-direction: column;
@@ -856,6 +854,35 @@
         box-sizing: border-box;
         max-width: 100vw;
         overflow-x: hidden;
+      }
+      /* 1. Reduce social media link size */
+      .social-links a,
+      .social-links.hero-social a {
+        width: 32px;
+        height: 32px;
+        min-width: 32px;
+        min-height: 32px;
+        padding: 0;
+      }
+      .social-links a img,
+      .social-links.hero-social a img {
+        width: 18px;
+        height: 18px;
+        min-width: 18px;
+        min-height: 18px;
+      }
+      /* 2. Reduce font size for everything in "Get in touch" Section */
+      .get-in-touch,
+      .get-in-touch * {
+        font-size: 0.9rem !important;
+        line-height: 1.4 !important;
+      }
+      .get-in-touch h2 {
+        font-size: 1.15rem !important;
+      }
+      .get-in-touch p,
+      .get-in-touch strong {
+        font-size: 0.9rem !important;
       }
     }
     @media (max-width: 400px) {
