--- a/index.html
+++ b/index.html
@@ -884,6 +884,22 @@
       .get-in-touch strong {
         font-size: 0.9rem !important;
       }
+      /* 3. Shrink intro text */
+      .hero-text-side h1 {
+        font-size: 1.3rem !important;
+      }
+      .hero-desc {
+        font-size: 0.96rem !important;
+        line-height: 1.5 !important;
+      }
+      /* 4. Shrink Project title and Project description */
+      .carousel-item h3 {
+        font-size: 1.02rem !important;
+      }
+      .carousel-item p {
+        font-size: 0.88rem !important;
+        line-height: 1.45 !important;
+      }
     }
     @media (max-width: 400px) {
       .profile-pic {
