--- a/index.html
+++ b/index.html
@@ -974,8 +974,8 @@
     <div class="hero-text-side">
       <h1>Hello Everyone!!</h1>
       <div class="hero-desc">
-        My name is Arupam Biswas, and I’m a Neuroscience Researcher exploring how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where I am currently pursuing my doctoral studies. <br><br>
-        Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to innovation, and I enjoy building bridges across disciplines.<br><br>
+        My name is Arupam Biswas, and I’m a Neuroscience Researcher exploring how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where I am currently a PhD student at the <a href="https://idn.biologie.uni-mainz.de/" target="_blank">Institute of Developmental Biology and Neurobiology(iDN)</a>.My research focuses on developing models and tools for next-generation therapies using precision-engineered artificial biomaterials to support central nervous system(CNS) regeneration after Traumatic Injuries of the Brain(TBI) or Spinal Cord(SCI), or neurodegenerative autoimmune diseases, such as Multiple Sclerosis(MS). <br><br>
+        Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts.<br><br>
         If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!
       </div>
     </div>
@@ -1026,8 +1026,8 @@
           <div class="item-info">
             <h3>PhD Topic: Interactive Biomaterials for Neural Regeneration (InteReg)</h3>
             <p>
-              Traumatic CNS injuries and diseases like MS lead to lasting disability due to poor regenerative capacity. Barriers include glial scarring, inhibitory debris, lack of axonal guidance, and more. My research focuses on developing smart biomaterials and engineered platforms to support neural repair, enhance regeneration, and restore function.
-            </p>
+              Traumatic injuries to the central nervous system (CNS), including brain and spinal cord damage, result in poor regeneration and lasting disability due to multiple barriers: glial scar formation, inhibitory debris, lack of axonal guidance, and inefficient remyelination. Similarly, Multiple Sclerosis (MS) is a chronic autoimmune demyelinating disease where oligodendrocytes are attacked, leading to axonal dysfunction. While early remyelination by OPCs is possible, it declines with disease progression, and no current therapies promote regeneration effectively.<br><br>
+              Our team aims to develop precision-engineered biomaterials to support CNS regeneration in trauma and MS. Aim 1: Design ECM-mimicking materials with bioactive and mechano-responsive properties to deliver pro-regenerative factors (Leads: Walther, Besenius, Jacob, Heine). Aim 2: Create cell-targeted nanocapsules to reprogram cells into repair-promoting phenotypes (Leads: Landfester, Mailänder, Jacob, Papic, Berninger, Weil). Aim 3: Engineer nanomaterials that cross the blood-brain barrier (BBB) (Leads: Landfester, Mailänder, Walther, Waisman). Aim 4: Develop advanced models, including vascularized brain organoids, to test delivery and therapeutic efficacy (Leads: Villiou, Walther, Mishra, Lutz, Berninger, Heine, Jacob).
           </div>
         </div>
         <div class="carousel-item">
@@ -1035,8 +1035,7 @@
           <div class="item-info">
             <h3>Master's Thesis: High-Content Screening for neurite growth analyses</h3>
             <p>
-              This work involved developing automated high-content screening methods to evaluate the effect of genetic and pharmacological treatments on neurite outgrowth in cultured neuronal cells. The goal was to identify new strategies to promote neural regeneration.
-            </p>
+              Neurons in the central nervous system (CNS), which includes the spinal cord and brain, project their axons to form essential connections. In mammals, these mature axons lose their intrinsic capacity for regeneration, resulting in permanent functional losses after injury. This makes recovery from spinal cord injuries highly unlikely, underscoring the need for novel therapeutic strategies. Research has shown that axon growth is dependent on the transcription of large networks of regeneration-associated genes (RAGs) or pro-growth genes. Activating these genes in adult neurons can stimulate axon regeneration past injury sites. However, with numerous pro-growth transcription factors (TFs) available, identifying an optimal set that promotes axon growth is a significant challenge. In this context, in vitro phenotypic screening becomes critical for evaluating the effects of these TFs on neuronal cells (Venkatesh et al., 2018; Venkatesh et al., 2020). High Content Screening (HCS) has been identified as an effective technique for the large-scale analysis of neuronal cell line morphology. We are establishing a rigorous experimental protocol to investigate the impact of altered TF expression on neurite outgrowth. This includes the development of methods to measure various parameters, such as the number of neurites and neurite length. This approach will provide valuable insights, serving as a foundation for identifying potential therapeutic strategies to enhance regenerative axon growth.
           </div>
         </div>
         <div class="carousel-item">
