--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@
           <div class="item-info">
             <h3>Master's Thesis: High-Content Screening for neurite growth analyses</h3>
             <p>
-              Neurons in the central nervous system (CNS), which includes the spinal cord and brain, project their axons to form essential connections. In mammals, these mature axons lose their intrinsic capacity for regeneration, resulting in permanent functional losses after injury. This makes recovery from spinal cord injuries highly unlikely, underscoring the need for novel therapeutic strategies. Research has shown that axon growth is dependent on the transcription of large networks of regeneration-associated genes (RAGs) or pro-growth genes. Activating these genes in adult neurons can stimulate axon regeneration past injury sites. However, with numerous pro-growth transcription factors (TFs) available, identifying an optimal set that promotes axon growth is a significant challenge. In this context, in vitro phenotypic screening becomes critical for evaluating the effects of these TFs on neuronal cells (Venkatesh et al., 2018; Venkatesh et al., 2020). High Content Screening (HCS) has been identified as an effective technique for the large-scale analysis of neuronal cell line morphology. We are establishing a rigorous experimental protocol to investigate the impact of altered TF expression on neurite outgrowth. This includes the development of methods to measure various parameters, such as the number of neurites and neurite length. This approach will provide valuable insights, serving as a foundation for identifying potential therapeutic strategies to enhance regenerative axon growth.
+              Neurons in the central nervous system (CNS), which includes the spinal cord and brain, project their axons to form essential connections. In mammals, these mature axons lose their intrinsic capacity for regeneration, resulting in permanent functional losses after injury. This makes recovery from spinal cord injuries highly unlikely, underscoring the need for novel therapeutic strategies.<br><br> Research has shown that axon growth is dependent on the transcription of large networks of regeneration-associated genes (RAGs) or pro-growth genes. Activating these genes in adult neurons can stimulate axon regeneration past injury sites. However, with numerous pro-growth transcription factors (TFs) available, identifying an optimal set that promotes axon growth is a significant challenge. <br><br>In this context, in-vitro phenotypic screening becomes critical for evaluating the effects of these TFs on neuronal cells (Venkatesh et al., 2018; Venkatesh et al., 2020). High Content Screening (HCS) has been identified as an effective technique for the large-scale analysis of neuronal cell line morphology. My honours thesis involved developing a rigorous experimental protocol to investigate the impact of altered TF expression on neurite outgrowth. This includes the development of methods to measure various parameters, such as neurites branching, neurite length etc. These findings highlight promising targets for future therapeutic strategies aimed at enhancing axon regeneration and improving recovery from CNS injuries.
           </div>
         </div>
         <div class="carousel-item">
@@ -1043,7 +1043,7 @@
           <div class="item-info">
             <h3>Other Research Projects</h3>
             <p>
-              Previous research experiences include work in behavioral neurogenetics, autophagy in cancer, and advanced imaging. Details available upon request or in the Gallery.
+              Details will be available soon.
             </p>
           </div>
         </div>
@@ -1057,13 +1057,13 @@
     <h2>Publications</h2>
     <ul class="publication-list">
       <li>
-        <span class="publication-title">[Sample Publication Title 1]</span><br>
-        <span class="publication-authors">A. Biswas, M. Heine, C. Jacob, H.K. Mishra</span><br>
-        <span class="publication-link"><a href="#" target="_blank">Link</a></span>
+        <span class="publication-title">Clinicopathology & Molecular Analysis of Diffuse Intrinsic Pontine Glioma (DIPG) in Children - Insights from Past, Present, and Future Directions.</span><br>
+        <span class="publication-authors">Arupam Biswas</span><br>
+        <span class="publication-link"><a href="https://doi.org/10.55544/jrasb.1.4.8" target="_blank">Link</a></span>
       </li>
       <li>
-        <span class="publication-title">[Sample Publication Title 2]</span><br>
-        <span class="publication-authors">A. Biswas, I. Venkatesh</span><br>
+        <span class="publication-title">[Updated Soon]</span><br>
+        <span class="publication-authors">Updated Soon</span><br>
         <span class="publication-link"><a href="#" target="_blank">Link</a></span>
       </li>
       <!-- Add more publications as needed -->
@@ -1074,15 +1074,9 @@
     <h2>Sci-Com</h2>
     <ul class="scicom-list">
       <li>
-        <span class="scicom-title">[Sample Sci-Com Activity 1]</span><br>
+        <span class="scicom-title">Soon Will be Updated</span><br>
         <span class="scicom-desc">
-          Presented neuroscience concepts to high school students at Science Day, Mainz (2024).
-        </span>
-      </li>
-      <li>
-        <span class="scicom-title">[Sample Sci-Com Activity 2]</span><br>
-        <span class="scicom-desc">
-          Organized and led “Neuro Night” outreach for the general public at Visva-Bharati.
+          Soon Will be Updated.
         </span>
       </li>
       <!-- Add more Sci-Com activities as needed -->
