--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@
     <div class="hero-text-side">
       <h1>Hello Everyone!!</h1>
       <div class="hero-desc">
-        My name is Arupam Biswas, and I’m a Neuroscience Researcher exploring how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where I am currently a PhD student at the <a href="https://idn.biologie.uni-mainz.de/" target="_blank">Institute of Developmental Biology and Neurobiology(iDN)</a>.My research focuses on developing models and tools for next-generation therapies using precision-engineered artificial biomaterials to support central nervous system(CNS) regeneration after Traumatic Injuries of the Brain(TBI) or Spinal Cord(SCI), or neurodegenerative autoimmune diseases, such as Multiple Sclerosis(MS). <br><br>
+        My name is Arupam Biswas, and I’m a Neuroscience Researcher exploring how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where I am currently a PhD student at the <a href="https://idn.biologie.uni-mainz.de/" target="_blank">Institute of Developmental Biology and Neurobiology(iDN)</a>.<br><br> My research focuses on developing models and tools for next-generation therapies using precision-engineered artificial biomaterials to support central nervous system(CNS) regeneration after Traumatic Injuries of the Brain(TBI) or Spinal Cord(SCI), or neurodegenerative autoimmune diseases, such as Multiple Sclerosis(MS). <br><br>
         Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts.<br><br>
         If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!
       </div>
